--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
 <br>
 <h1>This is using js color</h1>
 <p id="click"onclick="openDate()">Click me for get Date</p>
+<br>
+<h2>Enter any number to get a multiplication table</h2>
+<form id="tableForm">
+  <input type="number" id="numberInput" required>
+  <button type="submit">Generate Table</button>
+</form>
+
+<div id="tableResult"></div>
+<hr>
+<form id="evenOdd">
+  <input type="number"id="inputNumber"required>
+  <button type="submit">get results
+  </button></form>
+  <div id="numberResult"></div>
+
 </body>
 <script src="main.js"></script>
 </html>
